Fix layers overlap and cutting at edges.

--- a/src/vs/workbench/browser/parts/titlebar/media/titlebarpart.css
+++ b/src/vs/workbench/browser/parts/titlebar/media/titlebarpart.css
@@ -19,21 +19,7 @@
 	display: flex;
 }
 
-.monaco-workbench.windows .part.titlebar,
-.monaco-workbench.linux .part.titlebar {
-	/*
-	 * Explicitly put the part onto its own layer to help Chrome to
-	 * render the content with LCD-anti-aliasing. By partioning the
-	 * workbench into multiple layers, we can ensure that a bad
-	 * behaving part is not making another part fallback to greyscale
-	 * rendering.
-	 *
-	 * macOS: does not render LCD-anti-aliased.
-	 */
-	transform: translate3d(0px, 0px, 0px);
-	position: relative;
-	z-index: 1000; /* move the entire titlebar above the workbench, except modals/dialogs */
-}
+
 
 .monaco-workbench .part.titlebar > .titlebar-drag-region {
 	top: 0;
